--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ node_js:
 install:
   - curl https://install.meteor.com | /bin/sh
 script:
+  - meteor npm install --save babel-runtime
   - meteor test --once --driver-package dispatch:mocha
