--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simulado ENADE Dom Pedro II",
+  "name": "Simulado_ENADE_Dom_Pedro_II",
   "private": true,
   "scripts": {
     "start": "meteor run"
